--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "eslint": "^8.38.0",
     "eslint-config-react-app": "^7.0.1",
     "json-server-auth": "^2.1.0",
     "lowdb": "^5.0.5",
@@ -38,6 +39,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.5.1"
   }
 }
